--- a/spec_maker/static/css/style.css
+++ b/spec_maker/static/css/style.css
@@ -9,50 +9,27 @@ body {
 }
 
 .content {
-  padding: 15px 60px 45px;
   margin: 20px auto;
+}
+
+.main-box {
+  padding: 15px 60px 45px;
   background-color: #fff;
   border: 1px solid rgba(0,0,0,0.1);  
   border-radius: 15px;
 }
 
-.content .checkbox {
+.main-box .checkbox {
   margin-bottom: 10px;
 }
 
-.content .form-heading {
+.main-box .form-heading {
   line-height: 300%;
   text-align: center;
 }
 
-.content .checkbox {
+.main-box .checkbox {
   font-weight: normal;
-}
-
-.content .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
-}
-
-.content .form-control:focus {
-  z-index: 2;
-}
-
-.content input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.content input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
 
 @media(max-width:767px) {
