--- a/spec_maker/templates/spec_maker/spec_list.html
+++ b/spec_maker/templates/spec_maker/spec_list.html
@@ -15,13 +15,15 @@
 
 {% block content %}
 <div class="content">
-	<h1 class="text-center">Spec List</h1>
-	<hr>
-	{% for spec in specs %}
-	<div class="spec-box">
-		<a href="#">{{ spec }}</a>
+	<div class="main-box">
+		<h1 class="text-center">Spec List</h1>
+		<hr>
+		{% for spec in specs %}
+		<div class="spec-box">
+			<a href="#">{{ spec }}</a>
+		</div>
+		{% endfor %}
 	</div>
-	{% endfor %}
 </div>
 
 {% endblock %}
