--- a/spec_maker/templates/spec_maker/upload_image.html
+++ b/spec_maker/templates/spec_maker/upload_image.html
@@ -15,15 +15,17 @@
 
 {% block content %}
 <div class="content">
-	<div id="upload-image-box" class="upload-image-box">
-		<h2 class="text-center drag-image-here">Drag Image To Here</h2>
-	</div>
-	<div class="progress">
-		<div id="upload-progress-bar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-			0%
+	<div class="main-box">
+		<div id="upload-image-box" class="upload-image-box">
+			<h2 class="text-center drag-image-here">Drag Image To Here</h2>
 		</div>
-	</div>
-	<div id="message-box">
+		<div class="progress">
+			<div id="upload-progress-bar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+				0%
+			</div>
+		</div>
+		<div id="message-box">
+		</div>
 	</div>
 </div>
 
