--- a/spec_maker/templates/spec_maker/new_spec.html
+++ b/spec_maker/templates/spec_maker/new_spec.html
@@ -21,7 +21,7 @@
 <div class="content">
 	<div id="message-box">
 	</div>
-	<div class="main-box">
+	<div class="main-block">
 		<h1 class="text-center">New Spec</h1>
 		<hr>
 		<div>
