--- a/spec_maker/templates/spec_maker/spec_list.html
+++ b/spec_maker/templates/spec_maker/spec_list.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="content">
-	<div class="main-box">
+	<div class="main-block">
 		<h1 class="text-center">Spec List</h1>
 		<hr>
 		{% for spec in specs %}
