--- a/spec_maker/templates/spec_maker/upload_image.html
+++ b/spec_maker/templates/spec_maker/upload_image.html
@@ -15,7 +15,7 @@
 
 {% block content %}
 <div class="content">
-	<div class="main-box">
+	<div class="main-block">
 		<div id="upload-image-box" class="upload-image-box">
 			<h2 class="text-center drag-image-here">Drag Image To Here</h2>
 		</div>
