Remove upload image link in navbar

--- a/spec_maker/templates/base.html
+++ b/spec_maker/templates/base.html
@@ -63,7 +63,10 @@
 				<ul class="dropdown-menu" role="menu">
 					<li><a href="{% url 'new_spec' %}">New Spec</a></li>
 					<li><a href="{% url 'spec_list' %}">Spec List</a></li>
+					{#
+					Use local images instead
 					<li><a href="{% url 'upload_image' %}">Upload Image</a></li>
+					#}
 				</ul>
 				</li>
 			</ul>
