--- a/spec_maker/static/css/spec_list.css
+++ b/spec_maker/static/css/spec_list.css
@@ -3,20 +3,6 @@
   min-height: 600px;
 }
 
-.spec-box {
-  background-color: black;
-  border: 1px solid rgba(0,0,0,0.1);  
-  border-radius: 15px;
-  color: white;
-  float: left;
-  font-size: 1.7em;
-  height: 150px;
-  line-height: 150px;
-  text-align: center;
-  width: 150px;
-  margin: 20px 20px 20px 20px;
-}
-
-.spec-box a {
-  color: white;
+.action-block {
+  margin-bottom: 10px;
 }
