--- a/spec_maker/templates/spec_maker/new_spec.html
+++ b/spec_maker/templates/spec_maker/new_spec.html
@@ -32,7 +32,8 @@
 			<div id="jstree-block"></div>
 		</div>
 		<button id="submit-tree" class="btn btn-primary ladda-button" data-style="zoom-in">
-			<span class="ladda-label">Submit
+			<span class="ladda-label">
+				Submit
 			</span>
 		</button>
 		<button id="import-tree" class="btn btn-success">Import</button>
@@ -55,11 +56,13 @@
 		</div>
 	</div>
 </div>
+
 <script type="text/template" id="spec-template">
 	<label class="radio-inline">
 		<input type="radio" name="specOptions" value="<%= projectName %>"> <%= projectName %>
 	</label>
 </script>
+
 <script type="text/template" id="message-template">
 	<div class="alert <%= alertClass %>" role="alert">
 		<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
