--- a/spec_maker/templates/base.html
+++ b/spec_maker/templates/base.html
@@ -36,7 +36,7 @@
 		<style>
 			body {
 				padding-top: 60px;
-				padding-bottom: 100px;
+				/*padding-bottom: 100px;*/
 			}
 		</style>
 		{% block extra-head %}
