Open download link in new page

--- a/spec_maker/templates/spec_maker/spec_list.html
+++ b/spec_maker/templates/spec_maker/spec_list.html
@@ -51,7 +51,7 @@
 					<a href="#">{{ spec }}</a>
 				</td>
 				<td>
-					<a href="{{ MEDIA_URL }}specs/{{ spec }}/{{ spec }}.pdf">Download</a>
+					<a target="_blank" href="{{ MEDIA_URL }}specs/{{ spec }}/{{ spec }}.pdf">Download</a>
 				</td>
 			</tr>
 			{% endfor %}
