--- a/spec_maker/static/css/style.css
+++ b/spec_maker/static/css/style.css
@@ -1,6 +1,5 @@
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 50px;
   background-color: #eee;
 }
 
@@ -13,7 +12,7 @@ body {
 }
 
 .main-block {
-  padding: 15px 60px 15px;
+  padding: 15px 60px 5px;
   background-color: #fff;
   border: 1px solid rgba(0,0,0,0.1);  
   border-radius: 15px;
@@ -30,6 +29,11 @@ body {
 
 .main-block .checkbox {
   font-weight: normal;
+}
+
+.main-block h2 {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 @media(max-width:767px) {
