--- a/spec_maker/templates/spec_maker/spec_list.html
+++ b/spec_maker/templates/spec_maker/spec_list.html
@@ -59,7 +59,7 @@
 					<input name="spec-select" type="checkbox" value="{{ spec }}">
 				</td>
 				<td>
-					<a href="#">{{ spec }}</a>
+					{{ spec }}
 				</td>
 				<td>
 					<a target="_blank" href="{{ MEDIA_URL }}specs/{{ spec }}/{{ spec }}.pdf">PDF</a>
