--- a/spec_maker/templates/base.html
+++ b/spec_maker/templates/base.html
@@ -69,7 +69,9 @@
 		</div>
 		</header>
 		<div class="container">
-			<div class="row">
+			<div id="sub-container" class="row">
+				<div id="message-box">
+				</div>
 				<div class="col-sm-10 col-sm-offset-1">
 					{% block content %}{% endblock %}
 				</div>
@@ -84,10 +86,17 @@
 		</div>
 		</footer>
 		-->
+		<script type="text/template" id="message-template">
+			<div class="alert <%= alertClass %>" role="alert">
+				<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+				<%= message %>
+			</div>
+		</script>
 
 		{% block vendor-js %}
-		<script src="{% static 'jquery/jquery.min.js' %}"></script>
-		<script src="{% static 'bootstrap/dist/js/bootstrap.min.js' %}"></script>
+		<script src="{% static "jquery/jquery.min.js" %}"></script>
+		<script src="{% static "bootstrap/dist/js/bootstrap.min.js" %}"></script>
+		<script src="{% static "underscore/underscore-min.js" %}"></script>
 		{% endblock %}
 		{% compress js %}
 		{% endcompress %}
@@ -96,12 +105,29 @@
 		{% block extra-js %}
 		{% endblock %}
 		<script>
-			$('#git-commit-id').click(function (){
-				$.getJSON(
-					'git_commit_id.json',
-					function (data) {
-						alert(data.git_commit_id);
+			$(function (){
+				$('#git-commit-id').click(function () {
+					$.getJSON(
+						'git_commit_id.json',
+						function (data) {
+							alert(data.git_commit_id);
+						}
+					);
 				});
+				$.getJSON(
+					'check_project_out_of_date.json',
+					function (data) {
+						if (data.is_project_out_of_date) {
+							var messageTemplate = _.template(
+							$('#message-template').html()
+							)({
+								'alertClass': 'alert-warning',
+								'message': 'The code is out-of-date, please update it'
+							});
+							$('#message-box').html(messageTemplate);
+						}
+					}
+				);
 			});
 		</script>
 		{% endblock %} {# body #}
