--- a/spec_maker/templates/base.html
+++ b/spec_maker/templates/base.html
@@ -90,6 +90,7 @@
 			<div class="alert <%= alertClass %>" role="alert">
 				<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
 				<%= message %>
+				<a href="#" id="sync-code">Sync code</a>
 			</div>
 		</script>
 
@@ -105,6 +106,15 @@
 		{% block extra-js %}
 		{% endblock %}
 		<script>
+			$('sync-code').click(function () {
+				$.ajax({
+					'url': 'sync_code/',
+					'method': 'POST',
+				})
+				.done(function (data) {
+					console.log(data);
+				});
+			});
 			$(function (){
 				$('#git-commit-id').click(function () {
 					$.getJSON(
