--- a/spec_maker/templates/base.html
+++ b/spec_maker/templates/base.html
@@ -77,6 +77,22 @@
 				</div>
 			</div>
 		</div>
+		<div class="modal fade" id="wait-dialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" data-backdrop="static" data-keyboard="false">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h2>Processing...</h2>
+					</div>
+					<div class="modal-body">
+						<div class="progress">
+							<div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+								<span class="sr-only"></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 		<!--
 		<footer class="footer">
 		<div class="container clearfix">
@@ -127,15 +143,17 @@
 							});
 							$('#message-box').html(messageTemplate);
 							$('#sync-code').click(function () {
+								$('#wait-dialog').modal();
 								$.ajax({
 									'url': 'sync_code/',
 									'method': 'POST',
 								})
 								.done(function (data) {
+									// $('#wait-dialog').modal('hide');
 									if (data.error === 0) {
-										alert(data.message);
 										location.reload();
 									} else {
+										$('#wait-dialog').modal('hide');
 										alert(data.message);
 									}
 								});
